snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-all.jar.sha256
b08137e321a9a858cc1d2906acb82ab23919343adbb7b848e77d4b691dc4e461